--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" href="Images/Capture.PNG">
+    <link rel="icon" type="image/png" href="images/Capture.PNG">
     <link rel="stylesheet" href="style.css">
 
     <!-- animation -->
